    - Implemented qpp::QCircuit::
          kron()     - Kronecker product with another quantum circuit
                       description
          measureZ() - new overload that allows multiple targets at once
          adjoint()  - in place adjoint of quantum circuit description
          kron()     - in place Kronecker product with another quantum circuit
                       description
     - Implemented the corresponding free functions as friends of qpp::QCircuit:
          qpp::adjoint()     - adjoint of quantum circuit description
          qpp::kron()        - Kronecker product between two quantum circuit
                               descriptions
          qpp::replicate()   - replicates (repeats) a quantum circuit
                               description
          qpp::add_circuit() - adds two quantum circuit descriptions
    - API change qpp::QCircuit::get_gate_depth() to qpp::QCircuit::get_depth(),
      so now measurements are taken into account when computing depths
    - API change in qpp::QCircuit::cCTRL*(), now accepts an additional "shift" 
      on the control dits
    - Added "classes/layouts.h" header file for representing different physical
      qudit layouts. Implemented the class(es):
          qpp::Lattice                 - Qudits on a multi-dimensional
                                         orthogonal grid
          qpp::PeriodicBoundaryLattice - Qudits on a multi-dimensional
                                         orthogonal grid with periodic boundary
                                         conditions
    - Added support for non-destructive measurements in "instruments.h" by
      modifying the API for
          qpp::measure()
          qpp::measure_seq()
    - Added qudit resetting function in "intruments.h" and "classes/circuits.h"
          qpp::reset()           - Resets qudits in a multipartite state
          qpp::QCircuit::reset() - Resets qudits in a quantum circuit
                                   description