@@ -10,6 +10,11 @@ int main() {
     // create a qpp::QCircuit from a QASM file
     QCircuit qc = *qasm::read_from_file(
         PATH "/examples/circuits/qasm/teleport_minimal.qasm");
+    // note that QASM measurements are non-destructive, so the final state after
+    // this step when executed on an engine will be a state of 3 qubits; that is
+    // why we discard the first two qubits in the next line
+    qc.discard({0, 1});
+
     std::cout << ">> BEGIN CIRCUIT\n";
     std::cout << qc << '\n'; // displays the circuit
     std::cout << ">> END CIRCUIT\n\n";
@@ -20,9 +25,7 @@ int main() {
     std::cout << q_engine << '\n'; // display the measurement statistics
     std::cout << ">> END ENGINE STATISTICS\n\n";
 
-    // displays the final output state (its transpose to save console space);
-    // note that QASM measurements are non-destructive, so the final state will
-    // be a state of 3 qubits
+    // displays the final output state
     std::cout << ">> Final state:\n";
-    std::cout << disp(transpose(q_engine.get_psi())) << '\n';
+    std::cout << disp(q_engine.get_psi()) << '\n';
 }
