@@ -56,4 +56,3 @@ if(c==6) u1(-6*pi/8) q[0];
 if(c==7) u1(-7*pi/8) q[0];
 h q[0];
 measure q[0] -> c[3];
-
