@@ -1,24 +1,21 @@
-// quantum teleportation minimal example
+// quantum teleportation example
 OPENQASM 2.0;
 include "qelib1.inc";
-
-// declarations, 3 qubits, 2 classical bits
 qreg q[3];
 creg c0[1];
 creg c1[1];
-
-// initial state
+creg c2[1];
+// optional post-rotation for state tomography
+gate post q { }
 u3(0.3,0.2,0.1) q[0];
-
-// teleportation circuit
 h q[1];
 cx q[1],q[2];
 barrier q;
 cx q[0],q[1];
 h q[0];
-
-// measurements (non-destructive)
 measure q[0] -> c0[0];
 measure q[1] -> c1[0];
-if(c0==1) z q[2];
 if(c1==1) x q[2];
+if(c0==1) z q[2];
+post q[2];
+measure q[2] -> c2[0];
